# bunch

./: INTERNAL_DOCS.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  mod.rs  scan.rs  watch.rs
src-tauri/src/models/: config_node.rs  mod.rs  settings.rs
src-tauri/src/scanner/: discovery.rs  mod.rs  owner_inference.rs  tree_builder.rs
src/components/editor/: EditorPanel.tsx  EditorTabs.tsx  EditorToolbar.tsx  MarkdownPreview.tsx  MonacoEditor.tsx
src/components/inheritance/: InheritanceChain.tsx  InheritanceNode.tsx
src/components/layout/: AppLayout.tsx  MainPanel.tsx  Sidebar.tsx  StatusBar.tsx
src/components/settings/: SettingsPanel.tsx  ThemeToggle.tsx  ZoomControl.tsx
src/components/tree/: ContextMenu.tsx  TreeFilter.tsx  TreeNode.tsx  TreeSearch.tsx  TreeView.tsx
src/context/: ConfigTreeContext.tsx  ThemeContext.tsx  ZoomContext.tsx
src/lib/: config-parser.ts  path-utils.ts  tauri-commands.ts
src/styles/: globals.css
src/types/: config-tree.ts  settings.ts
