[package]
name = "bunch"
version = "0.1.0"
description = "Claude Code Config Manager"
authors = ["Marco Kotrotsos"]
edition = "2021"

[lib]
name = "bunch_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "bunch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
